Actualización de .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 tomcat
 .metadata
+.recommenders
 
 #
 # Default excludes
@@ -36,6 +37,7 @@ target/
 .settings/
 .classpath
 .project
+bin/
 
 # NetBeans specific
 nbproject/private/
